Fix Bug 312436 - "Important" tag duplication in some mails

FIXED-IN: 4.10.1
BUG: 312436