messagelist/core/view.cpp
@@ -34,6 +34,8 @@
 
 #include "messagecore/stringutil.h"
 
+#include <Nepomuk2/ResourceManager>
+
 #include <kmime/kmime_dateformatter.h> // kdepimlibs
 
 #include <Akonadi/Item>
@@ -2385,7 +2387,7 @@ bool View::event( QEvent *e )
         tip += htmlCodeForStandardRow.arg(  mi->formattedDate() ).arg( i18n( "Date" ) );
       }
 
-      QString status = mi->statusDescription();
+      QString status = mi->statusDescription(Nepomuk2::ResourceManager::instance()->initialized());
       const QString tags = mi->tagListDescription();
       if ( !tags.isEmpty () )
       {
